chore: update to support JDK 8